<resources>
    <string name="app_name">MyInventoryApp</string>
    <!--buttons-->
    <string name="save">Save item</string>
    <string name="add">Add new item</string>
    <string name="list">List of suppliers</string>
    <string name="back">Back</string>
    <!---hints-->
    <string name="label">Fill item details</string>
    <string name="pn">Product name</string>
    <string name="pr">Price</string>
    <string name="qu">Quantity</string>
    <string name="sup">Supplier name</string>
    <string name="ph">Supplier\'s phone</string>
    <string name="main">That\'s all we have:</string>
    <string name="add_sth">Please add an item</string>
    <string name="empty_text">It\'s empty in here</string>
    <string name="pname">Product name</string>
    <string name="dprice">Price</string>
    <string name="plus">+</string>
    <string name="dquant">Quantity</string>
    <string name="minus">-</string>
    <string name="dsupp">Supplier</string>
    <string name="phone">Phone</string>
    <string name="deleteAll">Are your sure to delete ALL items?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="java_supp">The supplier is: </string>
    <string name="call_java">Call supplier:   </string>
    <string name="java_price">The price is:  </string>
    <string name="no_more">There\'s nothing more!</string>
    <string name="delete1">Are you sure to delete?</string>
    <string name="no_substraction">There\'s nothing more!</string>
    <string name="update_details">Update item details</string>
    <string name="add_details">Add item details</string>
    <string name="please_fill">Please fill in details</string>
    <string name="unknow">Unknown URI</string>
    <string name="ins_not_supp">Insertion is not supported for this uri</string>
    <string name="del_not_supp">Deletion is not supported for this uri</string>
    <string name="not_empty">This field cannot be empty</string>
    <string name="not_proper">This is not proper value for quantity</string>
    <string name="unknow_uri">Cannot query unknown URI</string>
    <string name="upp_not_supp">Update is not supported for</string>
    <string name="not_insert">Nothing is inserted</string>
</resources>
